--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "astro-cloudinary": "^1.1.2",
     "fulldev-ui": "^0.4.30",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "two-up-element": "^1.0.1"
   }
 }
